# aoc

./: .gitignore  .pre-commit-config.yaml  get_input.py  pyproject.toml
2015/01/: puzzle_1.py  puzzle_2.py
2015/02/: puzzle_1.py  puzzle_2.py
2015/03/: puzzle_1.py  puzzle_2.py
2015/04/: puzzle_1.py  puzzle_2.py
2023/01/: puzzle_1.py  puzzle_2.py
