[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.ruff]
select = ["E", "F", "N", "I", "UP"]
# Exception name should be named with an Error suffix
ignore = ["N818"]
line-length = 100
target-version = "py311"

[tool.ruff.lint.isort]
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
